<resources>
    <string name="error_edit_text_password">Password must at least 8 character</string>
    <string name="email">Email</string>
    <string name="email_error">Please use the right email format</string>
    <string name="password">Password</string>
    <string name="have_a_account">Already haven\'t an account?</string>
    <string name="register">Register Here</string>
    <string name="desc_dicoding_banner">Image of dicoding</string>
    <string name="login">Sign in</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="join">Join with us</string>
    <string name="desc_icon_register_succes">Image of success register</string>
    <string name="back">Back</string>
    <string name="story">Story</string>
    <string name="description">Description of Post</string>
    <string name="date">Date</string>
    <string name="desc_add_post">Button of adding post</string>
    <string name="desc_menu_logout">Menu action logout</string>
    <string name="logout">Logout</string>
    <string name="post_date">Post created</string>
    <string name="add_new_story">Add New Story</string>
    <string name="desc_post_image">Preview picture for post story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="desc_camera">Button for open camera</string>
    <string name="desc_gallery">Button for open Gallery</string>
    <string name="upload">Upload</string>
    <string name="desc_upload">Button upload post story</string>
    <string name="description_label">Description</string>
    <string name="greeting_story">Are you ready to share your story?</string>
    <string name="greeting_offering_input_data">Please enter your data</string>
    <string name="warning">Something wen\'t wrong</string>
    <string name="show_post">Show Post</string>
    <string name="granted">Permission Granted</string>
    <string name="denied">Permission Denied</string>
    <string name="app_name">Submission Aplikasi Story</string>
    <string name="appwidget_text">Post Story</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">Data empty</string>
    <string name="pick_stack_widget">You click image on index %1$s</string>
    <string name="value_login">Your Logged</string>
    <string name="title_activity_maps_coverage_story">MapsCoverageStoryActivity</string>
    <string name="map">Coverage Map Story</string>
    <string name="retry">Retry</string>
    <string name="location_agreement">Do want to share your location for post?</string>
    <string name="enable_gps">Please enable your GPS</string>
</resources>