<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_marginHorizontal="32dp"
    android:layout_marginVertical="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_dicoding_banner"
            android:src="@drawable/dicoding_banner"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="1"
                android:textAlignment="textStart"
                style="@style/PoppinsFont.regular.bold"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:maxLines="1"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                style="@style/PoppinsFont.regular"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_description_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            style="@style/PoppinsFont.regular"
            android:text="@string/description"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>