<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.DetailPostActivity">

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/dicoding_banner_2"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc_dicoding_banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/detail_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="-20dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/background_primary"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/PoppinsFont.regular.bold.white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_name_layout"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PoppinsFont.regular.bold"
            android:layout_marginEnd="10dp"
            android:text="@string/post_date"/>

        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/PoppinsFont.regular"
            android:text="@string/date"/>

    </LinearLayout>

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        style="@style/PoppinsFont.regular.bold"
        app:layout_constraintTop_toBottomOf="@+id/date_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="@style/PoppinsFont.regular"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>